--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/MatsurSviat/file-manager/issues"
   },
-  "homepage": "https://github.com/MatsurSviat/file-manager/blob/main/README.md"
+  "homepage": "https://github.com/MatsurSviat/file-manager/blob/main/README.md",
+  "dependencies": {
+    "brotli": "^1.3.3"
+  }
 }
